--- a/About/index.html
+++ b/About/index.html
@@ -80,7 +80,7 @@
     </section>
 
     <section class="body">
-      <div class="container">
+      <div class="container container2">
         <div class="left">
           <img src="./Image 1.jpeg" alt="" />
         </div>
@@ -124,7 +124,7 @@
           </p>
         </div>
         <div class="left" style="padding: 20px">
-          <img src="./Image 2.jpeg" alt="" height="400px" />
+          <img src="./Image 2.jpeg" alt="" />
         </div>
       </div>
     </section>
