language_selectors in all pages.

--- a/wines/Details/Merlot/index.html
+++ b/wines/Details/Merlot/index.html
@@ -6,12 +6,23 @@
     <title>Merlot</title>
     <link rel="stylesheet" href="../details.css" />
     <link rel="stylesheet" href="../../../Header Menu and Modal/style.css" />
+    <link rel="stylesheet" href="../../../css/lang_select.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Neuton:ital@1&display=swap");
+    </style>
   </head>
   <body>
+    <div class="lang_select">
+      <a href="#"><span>DE</span></a>
+      <span>|</span>
+      <a href="#"><span>ES</span></a>
+      <span>|</span>
+      <a href="#"><span>EN</span></a>
+    </div>
     <section class="header">
       <div class="logo">
         <img
@@ -41,6 +52,7 @@
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
+            <li><a href="../../../weinbestellung/weinbestellung.html">Order Wine</a></li>
             <li><a href="../../../Gallery/index.html">Gallery</a></li>
             <li><a href="../../../Contact Us/index.html">Contact</a></li>
           </ul>
