--- a/About/index.html
+++ b/About/index.html
@@ -6,6 +6,7 @@
     <title>About</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../Header Menu and Modal/style.css" />
+    <link rel="stylesheet" href="../css/lang_select.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -14,8 +15,14 @@
       @import url("https://fonts.googleapis.com/css2?family=Neuton:ital@1&display=swap");
     </style>
   </head>
-
   <body>
+    <div class="lang_select">
+      <a href="#"><span>DE</span></a>
+      <span>|</span>
+      <a href="#"><span>ES</span></a>
+      <span>|</span>
+      <a href="#"><span>EN</span></a>
+    </div>
     <section class="header">
       <div class="logo">
         <img
