--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -6,10 +6,14 @@
     <title>Gallery</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../Header Menu and Modal/style.css" />
+    <link rel="stylesheet" href="../css/lang_select.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Neuton:ital@1&display=swap");
+    </style>
     <!-- Add these lines to your head section -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.10.0/css/lightgallery.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -19,6 +23,13 @@
 
   </head>
   <body>
+    <div class="lang_select">
+      <a href="#"><span>DE</span></a>
+      <span>|</span>
+      <a href="#"><span>ES</span></a>
+      <span>|</span>
+      <a href="#"><span>EN</span></a>
+    </div>
     <section class="header">
       <div class="logo">
         <img
