--- a/Home/index.html
+++ b/Home/index.html
@@ -7,6 +7,7 @@
     
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../Header Menu and Modal/style.css" />
+    <link rel="stylesheet" href="../css/lang_select.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -16,6 +17,13 @@
     </style>
   </head>
   <body>
+    <div class="lang_select">
+      <a href="#"><span>DE</span></a>
+      <span>|</span>
+      <a href="#"><span>ES</span></a>
+      <span>|</span>
+      <a href="#"><span>EN</span></a>
+    </div>
     <section class="header">
       <div class="logo">
         <img
