language_routes added, content remaining

--- a/About/index.html
+++ b/About/index.html
@@ -17,11 +17,11 @@
   </head>
   <body>
     <div class="lang_select">
-      <a href="#"><span>DE</span></a>
+      <a href="./index_de.html"><span>DE</span></a>
       <span>|</span>
-      <a href="#"><span>ES</span></a>
+      <a href="./index_es.html"><span>ES</span></a>
       <span>|</span>
-      <a href="#"><span>EN</span></a>
+      <a href="./index.html"><span>EN</span></a>
     </div>
     <section class="header">
       <div class="logo">
