--- a/About/index_es.html
+++ b/About/index_es.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wine EN</title>
+    <title>About ES</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../Header Menu and Modal/style.css" />
     <link rel="stylesheet" href="../css/lang_select.css" />
@@ -52,6 +52,7 @@
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
+            <li><a href="../weinbestellung/weinbestellung.html">Order Wine</a></li>
             <li><a href="../Gallery/index.html">Gallery</a></li>
             <li><a href="../Contact Us/index.html">Contact</a></li>
           </ul>
@@ -69,57 +70,75 @@
             Back
           </a>
           <ul>
-            <li><a href="./Details/Malbec/index.html">Malbec</a></li>
-            <li><a href="./Details/Merlot/index.html">Merlot</a></li>
-            <li><a href="./Details/Torrentes/index.html">Torrentes</a></li>
-            <li><a href="./Details/GranNevado/index.html">Gran Nevado</a></li>
+            <li><a href="../wines/Details/Malbec/index.html">Malbec</a></li>
+            <li><a href="../wines/Details/Merlot/index.html">Merlot</a></li>
+            <li>
+              <a href="../wines/Details/Torrentes/index.html">Torrentes</a>
+            </li>
+            <li>
+              <a href="../wines/Details/GranNevado/index.html">Gran Nevado</a>
+            </li>
           </ul>
         </nav>
       </div>
     </div>
 
-    <section class="caroussel">
-      <img src="./wines image.jpeg" alt="Wines Image" />
+    <section class="carousel">
+      <img src="./farms.jpeg" alt="Farms Image" />
     </section>
 
     <section class="body">
-      <div class="body1">
-        <h1>Our Wines</h1>
-        <div class="wine-cards">
-          <div class="card">
-            <img src="./malbes.png" alt="MALBEC Image" />
-            <p>MALBEC</p>
-          </div>
-          <div class="card">
-            <img src="./merlot.png" alt="MALBEC Image" />
-            <p>MERLOT</p>
-          </div>
-          <div class="card">
-            <img src="./torrentes.png" alt="MALBEC Image" />
-            <p>TORRENTES</p>
-          </div>
-          <div class="card">
-            <img
-              src="./gran nevado.png"
-              alt="MALBEC Image"
-              style="height: 302px"
-            />
-            <p style="width: 150px">GRAN NEVADO</p>
-          </div>
+      <div class="container container2">
+        <div class="left">
+          <img src="./Image 1.jpeg" alt="" />
         </div>
-        <p>
-          We have been producing the ADENTRO Malbec and Merlot since 2011. Four
-          years later, we have added to our selection, the white wine ADENTRO
-          Torrontés. These elegant wines with intense fruit flavors are vinified
-          close to our vineyard in one of Argentina’s most modern wineries. The
-          special climate allows the creation of intense, complex wines, rich in
-          fruit flavors, accompanied by soft tannins. Our vineyard is one of the
-          highest in the world, situated at almost 2700 meters above sea level.
-          <br />
+        <div class="right">
+          <h1>About Us</h1>
+          <p>
+            Attracted by the majestic mountains of the Andes, Viera Merz and
+            ChristianxGötz made several journeys to the northwest of Argentina.
+            <br /><br />
 
-          As of summer 2017 our wines are also available in Switzerland.
-        </p>
+            Fascinated by the mountains and the pristine landscape, in July 2005
+            we decided to purchase land in Cachi Adentro, at the foot of the
+            Nevado de Cachi. <br />
+            <br />
+
+            ChristianzGötz
+          </p>
+        </div>
       </div>
+      <div class="container container1">
+        <div class="right">
+          <h1>History</h1>
+          <p>
+            After acquiring the land, we put all our energy and passion into
+            developing the infrastructure of the farm. In stages we planted
+            altogether 8.25 hectares of vines and a walnut orchard measuring 1.5
+            hectares. With the invaluable help of three employees we built up
+            the finca from scratch. So now, we are proud of our six hectares of
+            Malbec, one hectare of Merlot and one and a half hectares of
+            Torrontés vines. We have our grapes vinified into elegant wines by a
+            modern winery nearby.<br />
+            <br />
+
+            Our next project is to build our own “bodega”. We seize this
+            opportunity despite the challenges of building a winery in an
+            isolated region. <br />
+            <br />
+
+            Since the summer of 2017 we are exporting the ADENTRO wines to
+            Switzerland, and we are delighted with the positive feedback.
+          </p>
+        </div>
+        <div class="left" style="padding: 20px">
+          <img src="./Image 2.jpeg" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section class="carousel1">
+      <img src="./farms1.jpg" alt="Farms Image" />
     </section>
 
     <section class="footer">
