--- a/Home/index_de.html
+++ b/Home/index_de.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home EN</title>
+    <title>Home DE</title>
     
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../Header Menu and Modal/style.css" />
@@ -44,22 +44,22 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../Home/index.html">Home</a></li>
-            <li><a href="../About/index.html">About us</a></li>
+            <li><a href="../Home/index_de.html">Startseite</a></li>
+            <li><a href="../About/index_de.html">Über uns</a></li>
             <li>
-              <a href="../wines/index.html">Wines</a>
+              <a href="../wines/index_de.html">Weine</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../Gallery/index.html">Gallery</a></li>
-            <li><a href="../Contact Us/index.html">Contact</a></li>
+            <li><a href="../weinbestellung/weinbestellung.html">Wein bestellen</a></li>
+            <li><a href="../Gallery/index_de.html">Galerie</a></li>
+            <li><a href="../Contact Us/index_de.html">Kontakt</a></li>
           </ul>
         </nav>
       </div>
-    </div>
+    </div>    
 
     <div class="modal" id="secondModal">
       <span class="close" id="closeSecondModal">&times;</span>
@@ -68,16 +68,16 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Zurück
           </a>
           <ul>
-            <li><a href="../wines/Details/Malbec/index.html">Malbec</a></li>
-            <li><a href="../wines/Details/Merlot/index.html">Merlot</a></li>
+            <li><a href="../wines/Details/Malbec/index_de.html">Malbec</a></li>
+            <li><a href="../wines/Details/Merlot/index_de.html">Merlot</a></li>
             <li>
-              <a href="../wines/Details/Torrentes/index.html">Torrentes</a>
+              <a href="../wines/Details/Torrentes/index_de.html">Torrentes</a>
             </li>
             <li>
-              <a href="../wines/Details/GranNevado/index.html">Gran Nevado</a>
+              <a href="../wines/Details/GranNevado/index_de.html">Gran Nevado</a>
             </li>
           </ul>
         </nav>
@@ -161,51 +161,39 @@
         <img src="./adentro_malbec-crop-u28702.png" alt="Adentro Bottle Logo" />
       </div>
       <div class="right">
-        <h1>Adentro Wines</h1>
+        <h1>Vinos Adentro</h1>
         <p>
-          In the northern part of the Argentinian Andes, near Cachi, lies the
-          vineyard Finca Rio Las Arcas at 2685 meters above sea level, and
-          counts as one of the highest in the world.
-        </p>
-
-        <p>
-          Back in 2005, in this peaceful, valley in which time seemed to have
-          stood still, we began to plant our vines. Our varietals Malbec, Merlot
-          and Torrontés, cover eight hectares, thriving amongst the old Arca
-          trees. These trees have become the hallmark of the vineyard and its
-          leaf decorates our label.
+          In Cachi, in den nördlichen argentinischen Anden, liegt die Finca Rio las Arcas auf 
+          2685 m ü. M. 2005 begannen wir in dieser archaischen, friedvollen Ecke Reben anzupflanzen. 
+          Auf gut 8 Hektaren gedeihen heute Malbec-, Merlot- und Torrontés-Trauben zwischen alten 
+          Arcas (Akazienbaum), welche zum Wahrzeichen unserer Finca geworden sind und deren Blatt 
+          unsere Weinetiketten ziert.
         </p>
         <p>
-          Far away from towns and cities, at the foot of the mighty Nevado de
-          Cachi (6400m), we have ideal conditions for cultivating vines. The
-          arid climate with little precipitation, high thermal amplitudes, an
-          abundance of sunshine, along with the unique climate of the region,
-          enables the growth of very high quality grapes. Thanks to the
-          beneficial conditions, very few treatments are required.
+          Weit weg von grossen Städten, am Fuss des 6400m hohen Nevado de Cachi, finden wir ideale Bedingungen für den Rebbau. Das aride Klima mit wenig Regen, einer grossen thermischen Amplitude, sehr viel Sonnenschein und das spezielle einmalige Höhenklima lassen Trauben von sehr guter Qualität heranwachsen. Wegen den günstigen Bedingungen muss kaum gespritzt werden.
         </p>
         <p>
-          Since 2011, we produce our wines - the ADENTRO Malbec and ADENTRO
-          Merlot. In 2015 we added the white wine ADENTRO Torrontés to our
-          selection. Our elegant wines are vinified in a very modern Bodegas
-          nearby. Thanks to the climate, we are able to produce fruity, complex,
-          wines with rounded tannins.
+          Seit 2011 produzieren wir unsere Weine: ADENTRO Malbec und Merlot. 2015 ist mit dem Torrontés ein Weisswein dazugekommen. Diese fruchtigen und noblen Weine lassen wir nahe unserer Finca in einer der modernsten Bodegas Argentiniens vinifizieren. Das Klima erlaubt es, fruchtige, tiefgründige und mit weichen Tanninen ausgestattete Weine zu produzieren.
         </p>
         <p>
-          Our wines are available at the moment in Argentina and Switzerland.
-          <br />
-          Varietals: Malbec, Merlot and Torrontés
+          Auf fast 2700 m ü. M gelegen, gehört unser Weinberg zu den höchsten der Welt. <br/>
+          Seit Sommer 2017 sind unsere ADENTRO-Weine in der Schweiz erhältlich. <br/>
+          Sie können hier direkt auf der Webseite bestellen oder bei der Vinothek Felsenkeller in Schaffhausen (www.felsenkeller-sh.ch) oder Gaumenfreuden Horgen (www.gaumen-freuden.ch) gekauft werden.
+        </p>
+        <p>
+          Rebsorten: Malbec, Merlot, Torrontés
         </p>
       </div>
     </section>
 
     <section class="footer">
       <p>
-        Vinos Adentro 2685 above sea level <br />
-        Cachi/Argentina
+        Vinos Adentro 2685 Meter über dem Meeresspiegel <br />
+        Cachi/Argentinien
       </p>
       <i class="fa fa-instagram" aria-hidden="true"></i>
     </section>
-
+    
     <script src="../Header Menu and Modal/header.js"></script>
 
     <script>
