--- a/wines/Details/Malbec/index_de.html
+++ b/wines/Details/Malbec/index_de.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Malbec EN</title>
+    <title>Malbec DE</title>
     <link rel="stylesheet" href="../details.css" />
     <link rel="stylesheet" href="../../../Header Menu and Modal/style.css" />
     <link rel="stylesheet" href="../../../css/lang_select.css" />
