--- a/wines/Details/Merlot/index.html
+++ b/wines/Details/Merlot/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Merlot</title>
+    <title>Merlot EN</title>
     <link rel="stylesheet" href="../details.css" />
     <link rel="stylesheet" href="../../../Header Menu and Modal/style.css" />
     <link rel="stylesheet" href="../../../css/lang_select.css" />
@@ -17,11 +17,11 @@
   </head>
   <body>
     <div class="lang_select">
-      <a href="#"><span>DE</span></a>
+      <a href="./index_de.html"><span>DE</span></a>
       <span>|</span>
-      <a href="#"><span>ES</span></a>
+      <a href="./index_es.html"><span>ES</span></a>
       <span>|</span>
-      <a href="#"><span>EN</span></a>
+      <a href="./index.html"><span>EN</span></a>
     </div>
     <section class="header">
       <div class="logo">
