--- a/wines/Details/Merlot/index_de.html
+++ b/wines/Details/Merlot/index_de.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Malbec EN</title>
+    <title>Merlot DE</title>
     <link rel="stylesheet" href="../details.css" />
     <link rel="stylesheet" href="../../../Header Menu and Modal/style.css" />
     <link rel="stylesheet" href="../../../css/lang_select.css" />
@@ -70,8 +70,8 @@
             Back
           </a>
           <ul>
-            <li><a href="./index.html">Malbec</a></li>
-            <li><a href="../Merlot/index.html">Merlot</a></li>
+            <li><a href="../Malbec/index.html">Malbec</a></li>
+            <li><a href="./index.html">Merlot</a></li>
             <li><a href="../Torrentes/index.html">Torrentes</a></li>
             <li><a href="../GranNevado/index.html">Gran Nevado</a></li>
           </ul>
@@ -84,42 +84,40 @@
     </section>
 
     <section class="body">
+      <h1>Merlot</h1>
       <div class="container">
         <div class="left">
           <img
-            src="./malbec bottle.png"
-            alt="Malbec Bottle png"
-            height="600px"
+            src="./Merlot image.png"
+            alt="Merlot Bottle png"
           />
         </div>
         <div class="right">
-          <h1>Malbec</h1>
           <p>
-            Intense, dark ruby red color. Expressive bouquet of rich, ripe
-            violet fruit with a floral scent and hints of minerality. Discreet
-            touch of tobacco and leather. Fresh acidity balanced with soft,
-            round tannins. The unique terroir of Cachi is embodied in this wine.
-            Long and noble finish.
+            Crimson red. Wonderful aromas of black berries and prunes, with a
+            hint of licorice and a hue of raspberry. Very elegant and rounded
+            palate. The fruit flavors fuse with hints of spices. Very long and
+            elegant finish.
           </p>
           <br />
           <h3>Country of origin:</h3>
-          <p>Cachi Adentro, Salta, Argentina</p>
+          <p>Cachi Adentro, Salta Argentina</p>
 
           <h3>Alcohol:</h3>
           <p>14.5%</p>
 
           <h3>Aging:</h3>
-          <p>12 months in oak</p>
+          <p>12 monts in oak</p>
 
           <h3>Complements</h3>
-          <p>Roast, red meats, barbeque, and stews</p>
+          <p>Roast, red meats, barbeque and stews</p>
           <div class="buttons">
-            <a href="../Merlot/index.html" class="btn1">Merlot</a>
-            <a href="../Torrentes/index.html" class="btn1 btn-margin"
-              >Torrentes</a
+            <a href="../Malbec/index.html"><div class="btn1">Malbec</div></a>
+            <a href="../Torrentes/index.html"
+              ><div class="btn1">Torrentes</div></a
             >
-            <a href="../GranNevado/index.html" class="btn1 btn-margin"
-              >Gran Nevado</a
+            <a href="../GranNevado/index.html"
+              ><div style="font-size: 15px;" class="btn1">Gran Nevado</div></a
             >
           </div>
         </div>
