--- a/wines/Details/GranNevado/index_de.html
+++ b/wines/Details/GranNevado/index_de.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Malbec EN</title>
+    <title>Gran Nevado DE</title>
     <link rel="stylesheet" href="../details.css" />
     <link rel="stylesheet" href="../../../Header Menu and Modal/style.css" />
     <link rel="stylesheet" href="../../../css/lang_select.css" />
@@ -70,10 +70,10 @@
             Back
           </a>
           <ul>
-            <li><a href="./index.html">Malbec</a></li>
+            <li><a href="../Malbec/index.html">Malbec</a></li>
             <li><a href="../Merlot/index.html">Merlot</a></li>
             <li><a href="../Torrentes/index.html">Torrentes</a></li>
-            <li><a href="../GranNevado/index.html">Gran Nevado</a></li>
+            <li><a href="./index.html">Gran Nevado</a></li>
           </ul>
         </nav>
       </div>
@@ -84,43 +84,45 @@
     </section>
 
     <section class="body">
+      <h1>Gran Nevado</h1>
       <div class="container">
         <div class="left">
           <img
-            src="./malbec bottle.png"
-            alt="Malbec Bottle png"
+            src="./Gran Nevado.png"
+            alt="Gran Nevado Bottle png"
             height="600px"
           />
         </div>
         <div class="right">
-          <h1>Malbec</h1>
           <p>
-            Intense, dark ruby red color. Expressive bouquet of rich, ripe
-            violet fruit with a floral scent and hints of minerality. Discreet
-            touch of tobacco and leather. Fresh acidity balanced with soft,
-            round tannins. The unique terroir of Cachi is embodied in this wine.
-            Long and noble finish.
+            The Gran Nevado is made with our best grapes. The grapes were
+            harvested by hand on April 5th and 11th 2016. 10% Merlot and 90%
+            Malbec grapes. After a careful selection they were fermented in
+            inox-tanks. Crizana partly in neutral and partly in new barrels.
+            Spontaneous fermentation was used, without additional yeast. Intense
+            dark color, almost black. Very fruity and fresh, but with a good
+            structure, thanks to the smooth tannins. An expression of the
+            high-altitude terroir of Cachi Adentro. A Long and persistent
+            finish.
           </p>
           <br />
           <h3>Country of origin:</h3>
-          <p>Cachi Adentro, Salta, Argentina</p>
+          <p>Cachi Adentro, Salta Argentina</p>
 
           <h3>Alcohol:</h3>
-          <p>14.5%</p>
+          <p>14.7%</p>
 
           <h3>Aging:</h3>
-          <p>12 months in oak</p>
+          <p>14 monts in oak</p>
 
           <h3>Complements</h3>
-          <p>Roast, red meats, barbeque, and stews</p>
+          <p>Roast, red meats, barbeque and stews</p>
           <div class="buttons">
-            <a href="../Merlot/index.html" class="btn1">Merlot</a>
-            <a href="../Torrentes/index.html" class="btn1 btn-margin"
-              >Torrentes</a
+            <a href="../Merlot/index.html"><div class="btn1">Merlot</div></a>
+            <a href="../Torrentes/index.html"
+              ><div class="btn1">Torrentes</div></a
             >
-            <a href="../GranNevado/index.html" class="btn1 btn-margin"
-              >Gran Nevado</a
-            >
+            <a href="../Malbec/index.html"><div class="btn1">Malbec</div></a>
           </div>
         </div>
       </div>
