--- a/wines/Details/Torrentes/index_es.html
+++ b/wines/Details/Torrentes/index_es.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Malbec EN</title>
+    <title>Torrentes ES</title>
     <link rel="stylesheet" href="../details.css" />
     <link rel="stylesheet" href="../../../Header Menu and Modal/style.css" />
     <link rel="stylesheet" href="../../../css/lang_select.css" />
@@ -70,9 +70,9 @@
             Back
           </a>
           <ul>
-            <li><a href="./index.html">Malbec</a></li>
+            <li><a href="../Malbec/index.html">Malbec</a></li>
             <li><a href="../Merlot/index.html">Merlot</a></li>
-            <li><a href="../Torrentes/index.html">Torrentes</a></li>
+            <li><a href="./index.html">Torrentes</a></li>
             <li><a href="../GranNevado/index.html">Gran Nevado</a></li>
           </ul>
         </nav>
@@ -80,47 +80,42 @@
     </div>
 
     <section class="caroussel">
-      <img src="./Malbec grapes.jpeg" alt="Wines Image" />
+      <img src="./Torrentes Grapes.jpeg" alt="Wines Image" />
     </section>
 
     <section class="body">
       <div class="container">
         <div class="left">
           <img
-            src="./malbec bottle.png"
-            alt="Malbec Bottle png"
-            height="600px"
+            src="./Torrentes image.png"
+            alt="Torrentes Bottle png"
           />
         </div>
         <div class="right">
-          <h1>Malbec</h1>
+          <h1>Torrentes</h1>
           <p>
-            Intense, dark ruby red color. Expressive bouquet of rich, ripe
-            violet fruit with a floral scent and hints of minerality. Discreet
-            touch of tobacco and leather. Fresh acidity balanced with soft,
-            round tannins. The unique terroir of Cachi is embodied in this wine.
-            Long and noble finish.
+            Luminous yellow. Scents of tropical fruit, with a floral freshness.
+            On the palate intense fruit. Thanks to the high altitude, it
+            showcases a delicately balanced acidity. A lovely, elegant, finish
+            with a hint of minerality.
           </p>
-          <br />
-          <h3>Country of origin:</h3>
-          <p>Cachi Adentro, Salta, Argentina</p>
+          <div class="details">
+            <h3>Country of origin:</h3>
+            <p>Cachi Adentro, Salta, Argentina</p>
 
-          <h3>Alcohol:</h3>
-          <p>14.5%</p>
+            <h3>Alcohol:</h3>
+            <p>13.5%</p>
 
-          <h3>Aging:</h3>
-          <p>12 months in oak</p>
+            <h3>Aging:</h3>
+            <p>12 months in oak</p>
 
-          <h3>Complements</h3>
-          <p>Roast, red meats, barbeque, and stews</p>
+            <h3>Complements:</h3>
+            <p>Aperitif, seafood, fish, white meats, and empanadas</p>
+          </div>
           <div class="buttons">
             <a href="../Merlot/index.html" class="btn1">Merlot</a>
-            <a href="../Torrentes/index.html" class="btn1 btn-margin"
-              >Torrentes</a
-            >
-            <a href="../GranNevado/index.html" class="btn1 btn-margin"
-              >Gran Nevado</a
-            >
+            <a href="../Malbec/index.html" class="btn1">Malbec</a>
+            <a href="../GranNevado/index.html" class="btn1">Gran Nevado</a>
           </div>
         </div>
       </div>
