--- a/Contact Us/index_es.html
+++ b/Contact Us/index_es.html
@@ -48,18 +48,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../Home/index.html">Home</a></li>
-            <li><a href="../About/index.html">About us</a></li>
+            <li><a href="../Home/index_es.html">Home</a></li>
+            <li><a href="../About/index_es.html">About us</a></li>
             <li>
-              <a href="../wines/index.html">Wines</a>
+              <a href="../wines/index_es.html">Wines</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
             <li><a href="../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../Gallery/index.html">Gallery</a></li>
-            <li><a href="../Contact Us/index.html">Contact</a></li>
+            <li><a href="../Gallery/index_es.html">Gallery</a></li>
+            <li><a href="../Contact Us/index_es.html">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -75,13 +75,13 @@
             Back
           </a>
           <ul>
-            <li><a href="../wines/Details/Malbec/index.html">Malbec</a></li>
-            <li><a href="../wines/Details/Merlot/index.html">Merlot</a></li>
+            <li><a href="../wines/Details/Malbec/index_es.html">Malbec</a></li>
+            <li><a href="../wines/Details/Merlot/index_es.html">Merlot</a></li>
             <li>
-              <a href="../wines/Details/Torrentes/index.html">Torrentes</a>
+              <a href="../wines/Details/Torrentes/index_es.html">Torrentes</a>
             </li>
             <li>
-              <a href="../wines/Details/GranNevado/index.html">Gran Nevado</a>
+              <a href="../wines/Details/GranNevado/index_es.html">Gran Nevado</a>
             </li>
           </ul>
         </nav>
