--- a/wines/Details/Malbec/index_de.html
+++ b/wines/Details/Malbec/index_de.html
@@ -43,18 +43,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../../../Home/index.html">Home</a></li>
-            <li><a href="../../../About/index.html">About us</a></li>
+            <li><a href="../../../Home/index_de.html">Home</a></li>
+            <li><a href="../../../About/index_de.html">About us</a></li>
             <li>
-              <a href="../../../wines/index.html">Wines</a>
+              <a href="../../../wines/index_de.html">Wines</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
             <li><a href="../../../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../../../Gallery/index.html">Gallery</a></li>
-            <li><a href="../../../Contact Us/index.html">Contact</a></li>
+            <li><a href="../../../Gallery/index_de.html">Gallery</a></li>
+            <li><a href="../../../Contact Us/index_de.html">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -70,10 +70,10 @@
             Back
           </a>
           <ul>
-            <li><a href="./index.html">Malbec</a></li>
-            <li><a href="../Merlot/index.html">Merlot</a></li>
-            <li><a href="../Torrentes/index.html">Torrentes</a></li>
-            <li><a href="../GranNevado/index.html">Gran Nevado</a></li>
+            <li><a href="./index_de.html">Malbec</a></li>
+            <li><a href="../Merlot/index_de.html">Merlot</a></li>
+            <li><a href="../Torrentes/index_de.html">Torrentes</a></li>
+            <li><a href="../GranNevado/index_de.html">Gran Nevado</a></li>
           </ul>
         </nav>
       </div>
@@ -114,11 +114,11 @@
           <h3>Complements</h3>
           <p>Roast, red meats, barbeque, and stews</p>
           <div class="buttons">
-            <a href="../Merlot/index.html" class="btn1">Merlot</a>
-            <a href="../Torrentes/index.html" class="btn1 btn-margin"
+            <a href="../Merlot/index_de.html" class="btn1">Merlot</a>
+            <a href="../Torrentes/index_de.html" class="btn1 btn-margin"
               >Torrentes</a
             >
-            <a href="../GranNevado/index.html" class="btn1 btn-margin"
+            <a href="../GranNevado/index_de.html" class="btn1 btn-margin"
               >Gran Nevado</a
             >
           </div>
