--- a/wines/Details/Torrentes/index_es.html
+++ b/wines/Details/Torrentes/index_es.html
@@ -43,18 +43,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../../../Home/index.html">Home</a></li>
-            <li><a href="../../../About/index.html">About us</a></li>
+            <li><a href="../../../Home/index_es.html">Home</a></li>
+            <li><a href="../../../About/index_es.html">About us</a></li>
             <li>
-              <a href="../../../wines/index.html">Wines</a>
+              <a href="../../../wines/index_es.html">Wines</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
             <li><a href="../../../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../../../Gallery/index.html">Gallery</a></li>
-            <li><a href="../../../Contact Us/index.html">Contact</a></li>
+            <li><a href="../../../Gallery/index_es.html">Gallery</a></li>
+            <li><a href="../../../Contact Us/index_es.html">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -70,10 +70,10 @@
             Back
           </a>
           <ul>
-            <li><a href="../Malbec/index.html">Malbec</a></li>
-            <li><a href="../Merlot/index.html">Merlot</a></li>
-            <li><a href="./index.html">Torrentes</a></li>
-            <li><a href="../GranNevado/index.html">Gran Nevado</a></li>
+            <li><a href="../Malbec/index_es.html">Malbec</a></li>
+            <li><a href="../Merlot/index_es.html">Merlot</a></li>
+            <li><a href="./index_es.html">Torrentes</a></li>
+            <li><a href="../GranNevado/index_es.html">Gran Nevado</a></li>
           </ul>
         </nav>
       </div>
@@ -113,9 +113,9 @@
             <p>Aperitif, seafood, fish, white meats, and empanadas</p>
           </div>
           <div class="buttons">
-            <a href="../Merlot/index.html" class="btn1">Merlot</a>
-            <a href="../Malbec/index.html" class="btn1">Malbec</a>
-            <a href="../GranNevado/index.html" class="btn1">Gran Nevado</a>
+            <a href="../Merlot/index_es.html" class="btn1">Merlot</a>
+            <a href="../Malbec/index_es.html" class="btn1">Malbec</a>
+            <a href="../GranNevado/index_es.html" class="btn1">Gran Nevado</a>
           </div>
         </div>
       </div>
