added-german-content

--- a/About/index_de.html
+++ b/About/index_de.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About DE</title>
+    <title>Über uns DE</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../Header Menu and Modal/style.css" />
     <link rel="stylesheet" href="../css/lang_select.css" />
@@ -33,7 +33,7 @@
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÜ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
     </section>
@@ -43,18 +43,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../Home/index_de.html">Home</a></li>
-            <li><a href="../About/index_de.html">About us</a></li>
+            <li><a href="../Home/index_de.html">Startseite</a></li>
+            <li><a href="../About/index_de.html">Über uns</a></li>
             <li>
-              <a href="../wines/index_de.html">Wines</a>
+              <a href="../wines/index_de.html">Weine</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../Gallery/index_de.html">Gallery</a></li>
-            <li><a href="../Contact Us/index_de.html">Contact</a></li>
+            <li><a href="../weinbestellung/weinbestellung.html">Wein bestellen</a></li>
+            <li><a href="../Gallery/index_de.html">Galerie</a></li>
+            <li><a href="../Contact Us/index_de.html">Kontakt</a></li>
           </ul>
         </nav>
       </div>
@@ -67,7 +67,7 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Zurück
           </a>
           <ul>
             <li><a href="../wines/Details/Malbec/index_de.html">Malbec</a></li>
@@ -84,7 +84,7 @@
     </div>
 
     <section class="carousel">
-      <img src="./farms.jpeg" alt="Farms Image" />
+      <img src="./farms.jpeg" alt="Bauernhöfe Bild" />
     </section>
 
     <section class="body">
@@ -93,15 +93,15 @@
           <img src="./Image 1.jpeg" alt="" />
         </div>
         <div class="right">
-          <h1>About Us</h1>
+          <h1>Über uns</h1>
           <p>
-            Attracted by the majestic mountains of the Andes, Viera Merz and
-            ChristianxGötz made several journeys to the northwest of Argentina.
+            Angezogen von den majestätischen Bergen der Anden machten Viera Merz und
+            ChristianxGötz mehrere Reisen in den Nordwesten Argentiniens.
             <br /><br />
 
-            Fascinated by the mountains and the pristine landscape, in July 2005
-            we decided to purchase land in Cachi Adentro, at the foot of the
-            Nevado de Cachi. <br />
+            Fasziniert von den Bergen und der unberührten Landschaft entschieden wir uns
+            im Juli 2005 dazu, Land in Cachi Adentro am Fuße des Nevado de Cachi zu kaufen.
+            <br />
             <br />
 
             ChristianzGötz
@@ -110,25 +110,24 @@
       </div>
       <div class="container container1">
         <div class="right">
-          <h1>History</h1>
+          <h1>Geschichte</h1>
           <p>
-            After acquiring the land, we put all our energy and passion into
-            developing the infrastructure of the farm. In stages we planted
-            altogether 8.25 hectares of vines and a walnut orchard measuring 1.5
-            hectares. With the invaluable help of three employees we built up
-            the finca from scratch. So now, we are proud of our six hectares of
-            Malbec, one hectare of Merlot and one and a half hectares of
-            Torrontés vines. We have our grapes vinified into elegant wines by a
-            modern winery nearby.<br />
+            Nach dem Erwerb des Landes steckten wir all unsere Energie und Leidenschaft
+            in die Entwicklung der Infrastruktur der Farm. In Etappen pflanzten wir
+            insgesamt 8,25 Hektar Reben und einen 1,5 Hektar großen Walnusshain. Mit der
+            unschätzbaren Hilfe von drei Mitarbeitern bauten wir die Finca von Grund auf auf.
+            Nun sind wir stolz auf unsere sechs Hektar Malbec, einen Hektar Merlot und
+            anderthalb Hektar Torrontés-Reben. Unsere Trauben lassen wir in einer modernen
+            Kellerei in der Nähe zu eleganten Weinen verarbeiten.<br />
             <br />
 
-            Our next project is to build our own “bodega”. We seize this
-            opportunity despite the challenges of building a winery in an
-            isolated region. <br />
+            Unser nächstes Projekt ist der Bau unserer eigenen "Bodega". Wir ergreifen
+            diese Gelegenheit trotz der Herausforderungen, in einer isolierten Region eine
+            Weinkellerei zu bauen. <br />
             <br />
 
-            Since the summer of 2017 we are exporting the ADENTRO wines to
-            Switzerland, and we are delighted with the positive feedback.
+            Seit dem Sommer 2017 exportieren wir die ADENTRO-Weine in die Schweiz und
+            freuen uns über das positive Feedback.
           </p>
         </div>
         <div class="left" style="padding: 20px">
@@ -138,13 +137,13 @@
     </section>
 
     <section class="carousel1">
-      <img src="./farms1.jpg" alt="Farms Image" />
+      <img src="./farms1.jpg" alt="Bauernhöfe Bild" />
     </section>
 
     <section class="footer">
       <p>
-        Vinos Adentro 2685 above sea level <br />
-        Cachi/Argentina
+        Vinos Adentro 2685 Meter über dem Meeresspiegel <br />
+        Cachi/Argentinien
       </p>
       <i class="fa fa-instagram" aria-hidden="true"></i>
     </section>
