--- a/Contact Us/index_de.html
+++ b/Contact Us/index_de.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us DE</title>
+    <title>Kontaktiere uns DE</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../Header Menu and Modal/style.css" />
     <link rel="stylesheet" href="../css/lang_select.css" />
@@ -38,7 +38,7 @@
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÜ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
     </section>
@@ -48,18 +48,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../Home/index_de.html">Home</a></li>
-            <li><a href="../About/index_de.html">About us</a></li>
+            <li><a href="../Home/index_de.html">Startseite</a></li>
+            <li><a href="../About/index_de.html">Über uns</a></li>
             <li>
-              <a href="../wines/index_de.html">Wines</a>
+              <a href="../wines/index_de.html">Weine</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../Gallery/index_de.html">Gallery</a></li>
-            <li><a href="../Contact Us/index_de.html">Contact</a></li>
+            <li><a href="../weinbestellung/weinbestellung.html">Wein bestellen</a></li>
+            <li><a href="../Gallery/index_de.html">Galerie</a></li>
+            <li><a href="../Contact Us/index_de.html">Kontakt</a></li>
           </ul>
         </nav>
       </div>
@@ -72,7 +72,7 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Zurück
           </a>
           <ul>
             <li><a href="../wines/Details/Malbec/index_de.html">Malbec</a></li>
@@ -88,20 +88,17 @@
       </div>
     </div>
 
-    <!-- <section class="carousel">
-      <img src="./Google Earth image.jpeg" alt="" />
-    </section> -->
     <iframe class="carousel" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d379.7120686148093!2d-66.16254709426306!3d-25.120461031827524!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x941c1e4204b94777%3A0xccc41c5fd8265045!2sCachi%2C%20Salta%20Province%2C%20Argentina!5e0!3m2!1sen!2s!4v1702141696027!5m2!1sen!2s" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     <section class="body">
-      <h1>Contact Us</h1>
+      <h1>Kontaktiere uns</h1>
       <div class="contact-form">
         <!-- Message Box -->
         <div class="message-div">
           <div class="info-box">
-            <p>We're looking for your message!</p>
+            <p>Wir freuen uns auf deine Nachricht!</p>
           </div>
-          <label for="message">Message:</label>
+          <label for="message">Nachricht:</label>
           <div class="message-div-one">
             <textarea id="message" name="message" rows="4" required></textarea>
             
@@ -116,25 +113,25 @@
 
         <!-- Email Input -->
         <div class="form-group">
-          <label for="email">Email:</label>
+          <label for="email">E-Mail:</label>
           <input type="email" id="email" name="email" required />
         </div>
 
         <!-- Captcha -->
         <div class="form-group">
-          <label for="captcha">Please Confirm:</label>
+          <label for="captcha">Bitte bestätige:</label>
           <!-- You can integrate a third-party captcha service here -->
           <input type="email" id="captcha" name="captcha" required />
         </div>
 
-        <button type="submit">Submit</button>
+        <button type="submit">Senden</button>
       </div>
     </section>
 
     <section class="footer">
       <p>
-        Vinos Adentro 2685 above sea level <br />
-        Cachi/Argentina
+        Vinos Adentro 2685 über dem Meeresspiegel <br />
+        Cachi/Argentinien
       </p>
       <i class="fa fa-instagram" aria-hidden="true"></i>
     </section>
