--- a/Home/index_de.html
+++ b/Home/index_de.html
@@ -34,10 +34,10 @@
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÜ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
-    </section>
+    </section>    
 
     <div class="modal" id="myModal">
       <span class="close" id="closeModal">&times;</span>
@@ -86,12 +86,12 @@
 
     <section class="carousel">
       <div class="slide">
-        <img src="./wine image.jpg" alt="Wines Image 1" />
+        <img src="./wine image.jpg" alt="Weinbild 1" />
         <div class="overlay">
           <div class="overlay-text">
             <p>
-              Special wines
-              <span style="color: #bc728a"> from a special place</span>
+              Besondere Weine
+              <span style="color: #bc728a"> aus einem besonderen Ort</span>
             </p>
             <div class="overlay-icons">
               <i
@@ -109,12 +109,12 @@
         </div>
       </div>
       <div class="slide">
-        <img src="./grapes.jpg" alt="Wines Image 2" />
+        <img src="./grapes.jpg" alt="Weinbild 2" />
         <div class="overlay">
           <div class="overlay-text">
             <p>
-              Passionate about
-              <span style="color: #bc728a"> malbec in the andes</span>
+              Leidenschaftlich für
+              <span style="color: #bc728a"> Malbec in den Anden</span>
             </p>
             <div class="overlay-icons">
               <i
@@ -132,12 +132,12 @@
         </div>
       </div>
       <div class="slide">
-        <img src="./mountains-image.jpg" alt="Wines Image 3" />
+        <img src="./mountains-image.jpg" alt="Weinbild 3" />
         <div class="overlay">
           <div class="overlay-text">
             <p>
-              Wines closer to heaver
-              <span style="color: #bc728a"> than to earth</span>
+              Weine näher am Himmel
+              <span style="color: #bc728a"> als an der Erde</span>
             </p>
             <div class="overlay-icons">
               <i
@@ -154,7 +154,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>    
 
     <section class="body">
       <div class="left">
