--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <script>
         // Redirect to ./Home/index.html
-        window.location.href = "./Home/index.html";
+        window.location.href = "./Home/index_de.html";
     </script>
 </head>
 <body>
