--- a/wines/Details/Merlot/index_de.html
+++ b/wines/Details/Merlot/index_de.html
@@ -33,7 +33,7 @@
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÜ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
     </section>
@@ -43,18 +43,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../../../Home/index_de.html">Home</a></li>
-            <li><a href="../../../About/index_de.html">About us</a></li>
+            <li><a href="../../../Home/index_de.html">Startseite</a></li>
+            <li><a href="../../../About/index_de.html">Über uns</a></li>
             <li>
-              <a href="../../../wines/index_de.html">Wines</a>
+              <a href="../../../wines/index_de.html">Weine</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="../../../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../../../Gallery/index_de.html">Gallery</a></li>
-            <li><a href="../../../Contact Us/index_de.html">Contact</a></li>
+            <li><a href="../../../weinbestellung/weinbestellung.html">Wein bestellen</a></li>
+            <li><a href="../../../Gallery/index_de.html">Galerie</a></li>
+            <li><a href="../../../Contact Us/index_de.html">Kontakt</a></li>
           </ul>
         </nav>
       </div>
@@ -67,7 +67,7 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Zurück
           </a>
           <ul>
             <li><a href="../Malbec/index_de.html">Malbec</a></li>
@@ -80,7 +80,7 @@
     </div>
 
     <section class="caroussel">
-      <img src="./Malbec grapes.jpeg" alt="Wines Image" />
+      <img src="./Malbec grapes.jpeg" alt="Weinbild" />
     </section>
 
     <section class="body">
@@ -89,28 +89,27 @@
         <div class="left">
           <img
             src="./Merlot image.png"
-            alt="Merlot Bottle png"
+            alt="Merlot Flasche png"
           />
         </div>
         <div class="right">
           <p>
-            Crimson red. Wonderful aromas of black berries and prunes, with a
-            hint of licorice and a hue of raspberry. Very elegant and rounded
-            palate. The fruit flavors fuse with hints of spices. Very long and
-            elegant finish.
+            Dunkelrot. Wunderbare Aromen von schwarzen Beeren und Pflaumen, mit einem Hauch von
+            Lakritz und einem Hauch von Himbeere. Sehr eleganter und abgerundeter Gaumen. Die
+            Fruchtaromen verschmelzen mit Gewürznoten. Sehr langes und elegantes Finish.
           </p>
           <br />
-          <h3>Country of origin:</h3>
-          <p>Cachi Adentro, Salta Argentina</p>
+          <h3>Herkunftsland:</h3>
+          <p>Cachi Adentro, Salta, Argentinien</p>
 
-          <h3>Alcohol:</h3>
-          <p>14.5%</p>
+          <h3>Alkoholgehalt:</h3>
+          <p>14,5%</p>
 
-          <h3>Aging:</h3>
-          <p>12 monts in oak</p>
+          <h3>Ausbau:</h3>
+          <p>12 Monate in Eichenfässern</p>
 
-          <h3>Complements</h3>
-          <p>Roast, red meats, barbeque and stews</p>
+          <h3>Begleiter</h3>
+          <p>Braten, rotes Fleisch, Grill und Eintöpfe</p>
           <div class="buttons">
             <a href="../Malbec/index_de.html"><div class="btn1">Malbec</div></a>
             <a href="../Torrentes/index_de.html"
@@ -126,8 +125,8 @@
 
     <section class="footer">
       <p>
-        Vinos Adentro 2685 above sea level <br />
-        Cachi/Argentina
+        Vinos Adentro 2685 Meter über dem Meeresspiegel <br />
+        Cachi/Argentinien
       </p>
       <i class="fa fa-instagram" aria-hidden="true"></i>
     </section>
