--- a/Gallery/index_de.html
+++ b/Gallery/index_de.html
@@ -29,80 +29,76 @@
         <a href="./index_es.html"><span>ES</span></a>
         <span>|</span>
         <a href="./index.html"><span>EN</span></a>
-      </div>
+    </div>
     <section class="header">
-      <div class="logo">
-        <img
-          src="./original-logo adentro.png"
-          alt="Vinos Adentro Logo"
-          height="80px"
-          width="115px"
-        />
-      </div>
-      <div class="menu" id="openModal">
-        <p>MENU</p>
-        <i class="fa fa-bars" aria-hidden="true"></i>
-      </div>
+        <div class="logo">
+            <img
+                src="./original-logo adentro.png"
+                alt="Vinos Adentro Logo"
+                height="80px"
+                width="115px"
+            />
+        </div>
+        <div class="menu" id="openModal">
+            <p>MENÜ</p>
+            <i class="fa fa-bars" aria-hidden="true"></i>
+        </div>
     </section>
 
     <div class="modal" id="myModal">
-      <span class="close" id="closeModal">&times;</span>
-      <div class="modal-content">
-        <nav>
-          <ul>
-            <li><a href="../Home/index_de.html">Home</a></li>
-            <li><a href="../About/index_de.html">About us</a></li>
-            <li>
-              <a href="../wines/index_de.html">Wines</a>
-              <a href="#" class="next-modal">
-                <i class="fa fa-chevron-right" aria-hidden="true"></i
-                ><i class="fa fa-chevron-right" aria-hidden="true"></i>
-              </a>
-            </li>
-            <li><a href="../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="./index_de.html">Gallery</a></li>
-            <li><a href="../Contact Us/index_de.html">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
+        <span class="close" id="closeModal">&times;</span>
+        <div class="modal-content">
+            <nav>
+                <ul>
+                    <li><a href="../Home/index_de.html">Startseite</a></li>
+                    <li><a href="../About/index_de.html">Über uns</a></li>
+                    <li>
+                        <a href="../wines/index_de.html">Weine</a>
+                        <a href="#" class="next-modal">
+                            <i class="fa fa-chevron-right" aria-hidden="true"></i
+                            ><i class="fa fa-chevron-right" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li><a href="../weinbestellung/weinbestellung.html">Wein bestellen</a></li>
+                    <li><a href="./index_de.html">Galerie</a></li>
+                    <li><a href="../Contact Us/index_de.html">Kontakt</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
 
     <div class="modal" id="secondModal">
-      <span class="close" id="closeSecondModal">&times;</span>
-      <div class="modal-content">
-        <nav>
-          <a href="#" class="prev-modal">
-            <i class="fa fa-chevron-left" aria-hidden="true"></i
-            ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
-          </a>
-          <ul>
-            <li><a href="../wines/Details/Malbec/index_de.html">Malbec</a></li>
-            <li><a href="../wines/Details/Merlot/index_de.html">Merlot</a></li>
-            <li>
-              <a href="../wines/Details/Torrentes/index_de.html">Torrentes</a>
-            </li>
-            <li>
-              <a href="../wines/Details/GranNevado/index_de.html">Gran Nevado</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+        <span class="close" id="closeSecondModal">&times;</span>
+        <div class="modal-content">
+            <nav>
+                <a href="#" class="prev-modal">
+                    <i class="fa fa-chevron-left" aria-hidden="true"></i
+                    ><i class="fa fa-chevron-left" aria-hidden="true"></i>
+                    Zurück
+                </a>
+                <ul>
+                    <li><a href="../wines/Details/Malbec/index_de.html">Malbec</a></li>
+                    <li><a href="../wines/Details/Merlot/index_de.html">Merlot</a></li>
+                    <li>
+                        <a href="../wines/Details/Torrentes/index_de.html">Torrentes</a>
+                    </li>
+                    <li>
+                        <a href="../wines/Details/GranNevado/index_de.html">Gran Nevado</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
 
     <section class="body">
-      <h1>Gallery</h1>
-      <div class="category-buttons">
-        <button class="category-button active" data-category="all">All</button>
-        <button class="category-button" data-category="work">Work</button>
-        <button class="category-button" data-category="landscape">
-          Landscape
-        </button>
-        <button class="category-button" data-category="vineyard">
-          Vineyard
-        </button>
-        <button class="category-button" data-category="grapes">Grapes</button>
-      </div>
+        <h1>Galerie</h1>
+        <div class="category-buttons">
+            <button class="category-button active" data-category="all">Alle</button>
+            <button class="category-button" data-category="work">Arbeit</button>
+            <button class="category-button" data-category="landscape">Landschaft</button>
+            <button class="category-button" data-category="vineyard">Weinberg</button>
+            <button class="category-button" data-category="grapes">Trauben</button>
+        </div>
       <div id="gallery" class="demo-gallery">
         <!-- Work images -->
         <div class="gallery-image" data-category="work" data-src="./Work/arbeit_0001.jpg">
