--- a/weinbestellung/weinbestellung.html
+++ b/weinbestellung/weinbestellung.html
@@ -29,32 +29,32 @@
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÜ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
-    </section>
+    </section>    
 
     <div class="modal" id="myModal">
       <span class="close" id="closeModal">&times;</span>
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../Home/index.html">Home</a></li>
-            <li><a href="../About/index.html">About us</a></li>
+            <li><a href="../Home/index_de.html">Startseite</a></li>
+            <li><a href="../About/index_de.html">Über uns</a></li>
             <li>
-              <a href="../wines/index.html">Wines</a>
+              <a href="../wines/index_de.html">Weine</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="#">Order Wine</a></li>
-            <li><a href="../Gallery/index.html">Gallery</a></li>
-            <li><a href="../Contact Us/index.html">Contact</a></li>
+            <li><a href="#">Wein bestellen</a></li>
+            <li><a href="../Gallery/index_de.html">Galerie</a></li>
+            <li><a href="../Contact Us/index_de.html">Kontakt</a></li>
           </ul>
         </nav>
       </div>
-    </div>
+    </div>    
 
     <div class="modal" id="secondModal">
       <span class="close" id="closeSecondModal">&times;</span>
@@ -63,16 +63,16 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Zurück
           </a>
           <ul>
-            <li><a href="../wines/Details/Malbec/index.html">Malbec</a></li>
-            <li><a href="../wines/Details/Merlot/index.html">Merlot</a></li>
+            <li><a href="../wines/Details/Malbec/index_de.html">Malbec</a></li>
+            <li><a href="../wines/Details/Merlot/index_de.html">Merlot</a></li>
             <li>
-              <a href="../wines/Details/Torrentes/index.html">Torrentes</a>
+              <a href="../wines/Details/Torrentes/index_de.html">Torrentes</a>
             </li>
             <li>
-              <a href="../wines/Details/GranNevado/index.html">Gran Nevado</a>
+              <a href="../wines/Details/GranNevado/index_de.html">Gran Nevado</a>
             </li>
           </ul>
         </nav>
