--- a/wines/Details/GranNevado/index_de.html
+++ b/wines/Details/GranNevado/index_de.html
@@ -33,7 +33,7 @@
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÜ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
     </section>
@@ -43,18 +43,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../../../Home/index_de.html">Home</a></li>
-            <li><a href="../../../About/index_de.html">About us</a></li>
+            <li><a href="../../../Home/index_de.html">Startseite</a></li>
+            <li><a href="../../../About/index_de.html">Über uns</a></li>
             <li>
-              <a href="../../../wines/index_de.html">Wines</a>
+              <a href="../../../wines/index_de.html">Weine</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="../../../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../../../Gallery/index_de.html">Gallery</a></li>
-            <li><a href="../../../Contact Us/index_de.html">Contact</a></li>
+            <li><a href="../../../weinbestellung/weinbestellung.html">Wein bestellen</a></li>
+            <li><a href="../../../Gallery/index_de.html">Galerie</a></li>
+            <li><a href="../../../Contact Us/index_de.html">Kontakt</a></li>
           </ul>
         </nav>
       </div>
@@ -67,7 +67,7 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Zurück
           </a>
           <ul>
             <li><a href="../Malbec/index_de.html">Malbec</a></li>
@@ -80,7 +80,7 @@
     </div>
 
     <section class="caroussel">
-      <img src="./Malbec grapes.jpeg" alt="Wines Image" />
+      <img src="./Malbec grapes.jpeg" alt="Weinbild" />
     </section>
 
     <section class="body">
@@ -89,34 +89,26 @@
         <div class="left">
           <img
             src="./Gran Nevado.png"
-            alt="Gran Nevado Bottle png"
+            alt="Gran Nevado Flasche png"
             height="600px"
           />
         </div>
         <div class="right">
           <p>
-            The Gran Nevado is made with our best grapes. The grapes were
-            harvested by hand on April 5th and 11th 2016. 10% Merlot and 90%
-            Malbec grapes. After a careful selection they were fermented in
-            inox-tanks. Crizana partly in neutral and partly in new barrels.
-            Spontaneous fermentation was used, without additional yeast. Intense
-            dark color, almost black. Very fruity and fresh, but with a good
-            structure, thanks to the smooth tannins. An expression of the
-            high-altitude terroir of Cachi Adentro. A Long and persistent
-            finish.
+            Der Gran Nevado wird mit unseren besten Trauben hergestellt. Die Trauben wurden am 5. und 11. April 2016 von Hand geerntet. 10% Merlot und 90% Malbec-Trauben. Nach einer sorgfältigen Auswahl wurden sie in Inox-Tanks fermentiert. Crizana teilweise in neutralen und teilweise in neuen Fässern. Es wurde spontane Fermentation verwendet, ohne zusätzliche Hefe. Intensive dunkle Farbe, fast schwarz. Sehr fruchtig und frisch, aber mit einer guten Struktur dank der weichen Tannine. Ein Ausdruck des Hochgebirgsterrains von Cachi Adentro. Ein langes und anhaltendes Finish.
           </p>
           <br />
-          <h3>Country of origin:</h3>
-          <p>Cachi Adentro, Salta Argentina</p>
+          <h3>Herkunftsland:</h3>
+          <p>Cachi Adentro, Salta, Argentinien</p>
 
-          <h3>Alcohol:</h3>
-          <p>14.7%</p>
+          <h3>Alkoholgehalt:</h3>
+          <p>14,7%</p>
 
-          <h3>Aging:</h3>
-          <p>14 monts in oak</p>
+          <h3>Ausbau:</h3>
+          <p>14 Monate in Eichenfässern</p>
 
-          <h3>Complements</h3>
-          <p>Roast, red meats, barbeque and stews</p>
+          <h3>Begleiter</h3>
+          <p>Braten, rotes Fleisch, Grill und Eintöpfe</p>
           <div class="buttons">
             <a href="../Merlot/index_de.html"><div class="btn1">Merlot</div></a>
             <a href="../Torrentes/index_de.html"
@@ -130,8 +122,8 @@
 
     <section class="footer">
       <p>
-        Vinos Adentro 2685 above sea level <br />
-        Cachi/Argentina
+        Vinos Adentro 2685 Meter über dem Meeresspiegel <br />
+        Cachi/Argentinien
       </p>
       <i class="fa fa-instagram" aria-hidden="true"></i>
     </section>
