--- a/wines/Details/Malbec/index_de.html
+++ b/wines/Details/Malbec/index_de.html
@@ -33,7 +33,7 @@
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÜ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
     </section>
@@ -43,18 +43,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../../../Home/index_de.html">Home</a></li>
-            <li><a href="../../../About/index_de.html">About us</a></li>
+            <li><a href="../../../Home/index_de.html">Startseite</a></li>
+            <li><a href="../../../About/index_de.html">Über uns</a></li>
             <li>
-              <a href="../../../wines/index_de.html">Wines</a>
+              <a href="../../../wines/index_de.html">Weine</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="../../../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../../../Gallery/index_de.html">Gallery</a></li>
-            <li><a href="../../../Contact Us/index_de.html">Contact</a></li>
+            <li><a href="../../../weinbestellung/weinbestellung.html">Wein bestellen</a></li>
+            <li><a href="../../../Gallery/index_de.html">Galerie</a></li>
+            <li><a href="../../../Contact Us/index_de.html">Kontakt</a></li>
           </ul>
         </nav>
       </div>
@@ -67,7 +67,7 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Zurück
           </a>
           <ul>
             <li><a href="./index_de.html">Malbec</a></li>
@@ -80,7 +80,7 @@
     </div>
 
     <section class="caroussel">
-      <img src="./Malbec grapes.jpeg" alt="Wines Image" />
+      <img src="./Malbec grapes.jpeg" alt="Weinbild" />
     </section>
 
     <section class="body">
@@ -88,31 +88,31 @@
         <div class="left">
           <img
             src="./malbec bottle.png"
-            alt="Malbec Bottle png"
+            alt="Malbec Flasche png"
             height="600px"
           />
         </div>
         <div class="right">
           <h1>Malbec</h1>
           <p>
-            Intense, dark ruby red color. Expressive bouquet of rich, ripe
-            violet fruit with a floral scent and hints of minerality. Discreet
-            touch of tobacco and leather. Fresh acidity balanced with soft,
-            round tannins. The unique terroir of Cachi is embodied in this wine.
-            Long and noble finish.
+            Intensive, dunkelrubinrote Farbe. Ausdrucksstarkes Bouquet von reichen, reifen
+            Veilchenfrüchten mit einem blumigen Duft und Anklängen von Mineralität. Dezente
+            Noten von Tabak und Leder. Frische Säure, ausbalanciert mit weichen, runden Tanninen.
+            Das einzigartige Terroir von Cachi spiegelt sich in diesem Wein wider. Langes und
+            edles Finish.
           </p>
           <br />
-          <h3>Country of origin:</h3>
-          <p>Cachi Adentro, Salta, Argentina</p>
+          <h3>Herkunftsland:</h3>
+          <p>Cachi Adentro, Salta, Argentinien</p>
 
-          <h3>Alcohol:</h3>
-          <p>14.5%</p>
+          <h3>Alkoholgehalt:</h3>
+          <p>14,5%</p>
 
-          <h3>Aging:</h3>
-          <p>12 months in oak</p>
+          <h3>Ausbau:</h3>
+          <p>12 Monate in Eichenfässern</p>
 
-          <h3>Complements</h3>
-          <p>Roast, red meats, barbeque, and stews</p>
+          <h3>Begleiter</h3>
+          <p>Braten, rotes Fleisch, Grill und Eintöpfe</p>
           <div class="buttons">
             <a href="../Merlot/index_de.html" class="btn1">Merlot</a>
             <a href="../Torrentes/index_de.html" class="btn1 btn-margin"
@@ -128,8 +128,8 @@
 
     <section class="footer">
       <p>
-        Vinos Adentro 2685 above sea level <br />
-        Cachi/Argentina
+        Vinos Adentro 2685 Meter über dem Meeresspiegel <br />
+        Cachi/Argentinien
       </p>
       <i class="fa fa-instagram" aria-hidden="true"></i>
     </section>
