--- a/wines/Details/Torrentes/index_de.html
+++ b/wines/Details/Torrentes/index_de.html
@@ -33,7 +33,7 @@
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÜ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
     </section>
@@ -43,18 +43,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../../../Home/index_de.html">Home</a></li>
-            <li><a href="../../../About/index_de.html">About us</a></li>
+            <li><a href="../../../Home/index_de.html">Startseite</a></li>
+            <li><a href="../../../About/index_de.html">Über uns</a></li>
             <li>
-              <a href="../../../wines/index_de.html">Wines</a>
+              <a href="../../../wines/index_de.html">Weine</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="../../../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../../../Gallery/index_de.html">Gallery</a></li>
-            <li><a href="../../../Contact Us/index_de.html">Contact</a></li>
+            <li><a href="../../../weinbestellung/weinbestellung.html">Wein bestellen</a></li>
+            <li><a href="../../../Gallery/index_de.html">Galerie</a></li>
+            <li><a href="../../../Contact Us/index_de.html">Kontakt</a></li>
           </ul>
         </nav>
       </div>
@@ -67,7 +67,7 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Zurück
           </a>
           <ul>
             <li><a href="../Malbec/index_de.html">Malbec</a></li>
@@ -80,7 +80,7 @@
     </div>
 
     <section class="caroussel">
-      <img src="./Torrentes Grapes.jpeg" alt="Wines Image" />
+      <img src="./Torrentes Grapes.jpeg" alt="Weinbild" />
     </section>
 
     <section class="body">
@@ -88,29 +88,28 @@
         <div class="left">
           <img
             src="./Torrentes image.png"
-            alt="Torrentes Bottle png"
+            alt="Torrentes Flasche png"
           />
         </div>
         <div class="right">
           <h1>Torrentes</h1>
           <p>
-            Luminous yellow. Scents of tropical fruit, with a floral freshness.
-            On the palate intense fruit. Thanks to the high altitude, it
-            showcases a delicately balanced acidity. A lovely, elegant, finish
-            with a hint of minerality.
+            Leuchtend gelb. Aromen von tropischen Früchten mit einer floralen Frische.
+            Am Gaumen intensive Fruchtaromen. Dank der großen Höhe präsentiert er eine
+            delikat ausbalancierte Säure. Ein schönes, elegantes Finish mit einem Hauch von Mineralität.
           </p>
           <div class="details">
-            <h3>Country of origin:</h3>
-            <p>Cachi Adentro, Salta, Argentina</p>
+            <h3>Herkunftsland:</h3>
+            <p>Cachi Adentro, Salta, Argentinien</p>
 
-            <h3>Alcohol:</h3>
-            <p>13.5%</p>
+            <h3>Alkoholgehalt:</h3>
+            <p>13,5%</p>
 
-            <h3>Aging:</h3>
-            <p>12 months in oak</p>
+            <h3>Ausbau:</h3>
+            <p>12 Monate in Eichenfässern</p>
 
-            <h3>Complements:</h3>
-            <p>Aperitif, seafood, fish, white meats, and empanadas</p>
+            <h3>Begleiter:</h3>
+            <p>Aperitif, Meeresfrüchte, Fisch, weißes Fleisch und Empanadas</p>
           </div>
           <div class="buttons">
             <a href="../Merlot/index_de.html" class="btn1">Merlot</a>
@@ -123,8 +122,8 @@
 
     <section class="footer">
       <p>
-        Vinos Adentro 2685 above sea level <br />
-        Cachi/Argentina
+        Vinos Adentro 2685 Meter über dem Meeresspiegel <br />
+        Cachi/Argentinien
       </p>
       <i class="fa fa-instagram" aria-hidden="true"></i>
     </section>
