--- a/wines/index_de.html
+++ b/wines/index_de.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wine DE</title>
+    <title>Wein DE</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../Header Menu and Modal/style.css" />
     <link rel="stylesheet" href="../css/lang_select.css" />
@@ -33,7 +33,7 @@
         />
       </div>
       <div class="menu" id="openModal">
-        <p>MENU</p>
+        <p>MENÜ</p>
         <i class="fa fa-bars" aria-hidden="true"></i>
       </div>
     </section>
@@ -43,18 +43,18 @@
       <div class="modal-content">
         <nav>
           <ul>
-            <li><a href="../Home/index_de.html">Home</a></li>
-            <li><a href="../About/index_de.html">About us</a></li>
+            <li><a href="../Home/index_de.html">Startseite</a></li>
+            <li><a href="../About/index_de.html">Über uns</a></li>
             <li>
-              <a href="../wines/index_de.html">Wines</a>
+              <a href="../wines/index_de.html">Weine</a>
               <a href="#" class="next-modal">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i
                 ><i class="fa fa-chevron-right" aria-hidden="true"></i>
               </a>
             </li>
-            <li><a href="../weinbestellung/weinbestellung.html">Order Wine</a></li>
-            <li><a href="../Gallery/index_de.html">Gallery</a></li>
-            <li><a href="../Contact Us/index_de.html">Contact</a></li>
+            <li><a href="../weinbestellung/weinbestellung.html">Wein bestellen</a></li>
+            <li><a href="../Gallery/index_de.html">Galerie</a></li>
+            <li><a href="../Contact Us/index_de.html">Kontakt</a></li>
           </ul>
         </nav>
       </div>
@@ -67,7 +67,7 @@
           <a href="#" class="prev-modal">
             <i class="fa fa-chevron-left" aria-hidden="true"></i
             ><i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Back
+            Zurück
           </a>
           <ul>
             <li><a href="./Details/Malbec/index_de.html">Malbec</a></li>
@@ -80,53 +80,54 @@
     </div>
 
     <section class="caroussel">
-      <img src="./wines image.jpeg" alt="Wines Image" />
+      <img src="./wines image.jpeg" alt="Weinbild" />
     </section>
 
     <section class="body">
       <div class="body1">
-        <h1>Our Wines</h1>
+        <h1>Unsere Weine</h1>
         <div class="wine-cards">
           <div class="card">
-            <img src="./malbes.png" alt="MALBEC Image" />
+            <img src="./malbes.png" alt="MALBEC Bild" />
             <p>MALBEC</p>
           </div>
           <div class="card">
-            <img src="./merlot.png" alt="MALBEC Image" />
+            <img src="./merlot.png" alt="MERLOT Bild" />
             <p>MERLOT</p>
           </div>
           <div class="card">
-            <img src="./torrentes.png" alt="MALBEC Image" />
+            <img src="./torrentes.png" alt="TORRENTES Bild" />
             <p>TORRENTES</p>
           </div>
           <div class="card">
             <img
               src="./gran nevado.png"
-              alt="MALBEC Image"
+              alt="GRAN NEVADO Bild"
               style="height: 302px"
             />
             <p style="width: 150px">GRAN NEVADO</p>
           </div>
         </div>
         <p>
-          We have been producing the ADENTRO Malbec and Merlot since 2011. Four
-          years later, we have added to our selection, the white wine ADENTRO
-          Torrontés. These elegant wines with intense fruit flavors are vinified
-          close to our vineyard in one of Argentina’s most modern wineries. The
-          special climate allows the creation of intense, complex wines, rich in
-          fruit flavors, accompanied by soft tannins. Our vineyard is one of the
-          highest in the world, situated at almost 2700 meters above sea level.
+          Wir produzieren den ADENTRO Malbec und Merlot seit 2011. Vier Jahre
+          später haben wir unserer Auswahl den weißen Wein ADENTRO Torrontés
+          hinzugefügt. Diese eleganten Weine mit intensiven Fruchtaromen werden
+          in der Nähe unseres Weinbergs in einer der modernsten Kellereien
+          Argentiniens vinifiziert. Das besondere Klima ermöglicht die
+          Herstellung von intensiven, komplexen Weinen, reich an Fruchtaromen und
+          begleitet von sanften Tanninen. Unser Weinberg liegt eine der höchsten
+          der Welt, fast 2700 Meter über dem Meeresspiegel.
           <br />
 
-          As of summer 2017 our wines are also available in Switzerland.
+          Seit Sommer 2017 sind unsere Weine auch in der Schweiz erhältlich.
         </p>
       </div>
     </section>
 
     <section class="footer">
       <p>
-        Vinos Adentro 2685 above sea level <br />
-        Cachi/Argentina
+        Vinos Adentro 2685 Meter über dem Meeresspiegel <br />
+        Cachi/Argentinien
       </p>
       <i class="fa fa-instagram" aria-hidden="true"></i>
     </section>
